build(mps-model-adapters,mps-sync-plugin,bulk-model-sync): sanitize the MPS product-info.json
The gradle-intellij-plugin 1.x reads the launch information from
product-info.json and injects it into the forked test JVM. Two pieces of
that, meant for launching the real IDE, break the test executor; both
are sanitized in copyMps(), keeping the file present and valid (it also
serves as the PathManager marker):

- resolveIdeHomeVariable assumes every additionalJvmArgument is
  "key=value" and does split("=")[1], so an argument without "=" (e.g.
  -XX:+UseCompressedOops) throws IndexOutOfBoundsException while
  configuring the test task. Drop them all; OpenedPackages provides the
  --add-opens the platform needs.
- the plugin passes every line of the referenced .vmoptions file to the
  JVM verbatim, including "#..." comment lines. The launcher treats such
  a token as the main class, so the -Djava.system.class.loader it also
  sets cannot be resolved and the VM aborts during initialization. Strip
  comment and blank lines, keeping the real options.

Also add a launch entry for the current host OS/arch when none matches:
the Maven MPS distribution declares only Linux/amd64, and the plugin
refuses to run on a host without a matching entry, which blocks running
the IDE tests locally on e.g. Apple Silicon.

MPS versions that ship no product-info.json (<= 2024.1) are unaffected.